remove dead code